--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="com.example.dellc.mynews.GuideActivity">
+    tools:context="com.example.dellc.mynews.activity.GuideActivity">
 
 
     <ViewFlipper
