--- a/app/src/main/res/layout/frangment_news.xml
+++ b/app/src/main/res/layout/frangment_news.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dellc.mynews.MainActivity">
+    tools:context="com.example.dellc.mynews.activity.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/news_listview"
